Fix photo unavailable text alignment in PDF

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -108,7 +108,7 @@ table {
       text-align: center;
       margin-top: 70px;
       margin-bottom: 70px;
-      margin-left: 45px;
+      margin-left: 80px;
       margin-right: 10px;
     }
 
